--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,16 @@
+bcrypt==5.0.0
+blinker==1.9.0
+cffi==2.0.0
+click==8.3.0
+cryptography==46.0.2
 Flask==3.0.0
-Flask-CORS==4.0.0
+Flask-Cors==4.0.0
+Flask-MySQLdb==1.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+mysql-connector-python==9.4.0
+mysqlclient==2.2.7
+pycparser==2.23
 python-dotenv==1.0.0
-mysql-connector-python
-
+Werkzeug==3.1.3
