--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,16 +1,7 @@
-bcrypt==5.0.0
-blinker==1.9.0
-cffi==2.0.0
-click==8.3.0
-cryptography==46.0.2
-Flask==3.0.0
-Flask-Cors==4.0.0
-Flask-MySQLdb==1.0.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-mysql-connector-python==9.4.0
-mysqlclient==2.2.7
-pycparser==2.23
-python-dotenv==1.0.0
-Werkzeug==3.1.3
+bcrypt>=4.0.0
+Flask>=2.0.0
+Flask-Cors>=3.0.0
+Flask-JWT-Extended>=4.0.0
+mysql-connector-python>=8.0.0
+cryptography>=3.0.0
+python-dotenv>=0.19.0
