--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,3 +6,7 @@ mysql-connector-python>=8.0.0
 cryptography>=3.0.0
 python-dotenv>=0.19.0
 Flask-Mail>=0.9.1
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+requests>=2.31.0
