--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,3 +10,6 @@ google-auth>=2.0.0
 google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
 requests>=2.31.0
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
