Add file header comments with author attribution
- Add headers to all project files with author names (Kamal Sherawat, JJ Feeney III, Jason Albanus)
- Include file descriptions and date (Virginia Tech August 22, 2025)
- Backend files credited to Jason Albanus
- Database and visualization files credited to JJ Feeney III
- Frontend files credited to Kamal Sherawat with co-authorship for chart components

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,3 +1,9 @@
+// tsconfig.app.json
+//
+// Kamal Sherawat Virginia Tech August 22, 2025
+//
+// TypeScript compiler configuration for React application source files with strict type checking.
+//
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
