--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -1,3 +1,9 @@
+// tsconfig.node.json
+//
+// Kamal Sherawat Virginia Tech August 22, 2025
+//
+// TypeScript compiler configuration for Node.js tooling files like Vite config.
+//
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
